src/C/CParser.java
package C;/* Generated By:JavaCC: Do not edit this line. C.CParser.java */
import java.util.*;

  public class CParser implements CParserConstants {

    // Hastable for storing typedef types
    private static Set types = new HashSet();

    // Stack for determining when the parser
    // is parsing a typdef definition.
    private static Stack typedefParsingStack = new Stack();

    // Returns true if the given string is
    // a typedef type.
    private static boolean isType(String type){
          return types.contains(type);
    }

    // Add a typedef type to those already defined
    private static void addType(String type){
          types.add(type);
    }

    // Prints out all the types used in parsing the c source
    private static void printTypes(){
      for (Iterator i = types.iterator(); i.hasNext();) {
        System.out.println(i.next());
      }
    }

    // Run the parser
    public static void main ( String args [ ] ) {
      CParser parser ;

          // Hack to include type "special types"
            types.add("__signed__");
            types.add("__const");
            types.add("__inline__");
            types.add("__signed");

      if(args.length == 0){
        System.out.println("C Parser Version 0.1Alpha:  Reading from standard input . . .");
        parser = new CParser(System.in);
      }
      else if(args.length == 1){
        System.out.println("C Parser Version 0.1Alpha:  Reading from file " + args[0] + " . . ." );
      try {
        parser = new CParser(new java.io.FileInputStream(args[0]));
      }
      catch(java.io.FileNotFoundException e){
        System.out.println("C Parser Version 0.1:  File " + args[0] + " not found.");
        return ;
        }
      }
      else {
        System.out.println("C Parser Version 0.1Alpha:  Usage is one of:");
        System.out.println("         java C.CParser < inputfile");
        System.out.println("OR");
        System.out.println("         java C.CParser inputfile");
        return ;
      }
      try {
        parser.TranslationUnit();
        System.out.println("C Parser Version 0.1Alpha:  Java program parsed successfully.");
      }
      catch(ParseException e){
        System.out.println("C Parser Version 0.1Alpha:  Encountered errors during parse.");
        e.printStackTrace();
      }
    }

  static final public void TranslationUnit() throws ParseException {
    label_1:
    while (true) {
      ExternalDeclaration();
      if (jj_2_1(1)) {
        ;
      } else {
        break label_1;
      }
    }
         printTypes();
  }

  static final public void ExternalDeclaration() throws ParseException {
    if (jj_2_2(2147483647)) {
      FunctionDefinition();
    } else if (jj_2_3(1)) {
      Declaration();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void FunctionDefinition() throws ParseException {
    if (jj_2_4(2147483647)) {
      DeclarationSpecifiers();
    } else {
      ;
    }
    Declarator();
    if (jj_2_5(1)) {
      DeclarationList();
    } else {
      ;
    }
    CompoundStatement();
  }

  static final public void Declaration() throws ParseException {
    DeclarationSpecifiers();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
    case 61:
    case 65:
      InitDeclaratorList();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    jj_consume_token(55);
  }

  static final public void DeclarationList() throws ParseException {
    label_2:
    while (true) {
      Declaration();
      if (jj_2_6(2147483647)) {
        ;
      } else {
        break label_2;
      }
    }
  }

  static final public void DeclarationSpecifiers() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case REGISTER:
    case TYPEDEF:
    case EXTERN:
    case STATIC:
    case AUTO:
      StorageClassSpecifier();
      if (jj_2_7(2147483647)) {
        DeclarationSpecifiers();
      } else {
        ;
      }
      break;
    default:
      jj_la1[1] = jj_gen;
      if (jj_2_10(1)) {
        TypeSpecifier();
        if (jj_2_8(2147483647)) {
          DeclarationSpecifiers();
        } else {
          ;
        }
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOLATILE:
        case CONST:
          TypeQualifier();
          if (jj_2_9(2147483647)) {
            DeclarationSpecifiers();
          } else {
            ;
          }
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void StorageClassSpecifier() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AUTO:
      jj_consume_token(AUTO);
      break;
    case REGISTER:
      jj_consume_token(REGISTER);
      break;
    case STATIC:
      jj_consume_token(STATIC);
      break;
    case EXTERN:
      jj_consume_token(EXTERN);
      break;
    case TYPEDEF:
      jj_consume_token(TYPEDEF);
                typedefParsingStack.push(Boolean.TRUE);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void TypeSpecifier() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
      jj_consume_token(VOID);
      break;
    case CHAR:
      jj_consume_token(CHAR);
      break;
    case SHORT:
      jj_consume_token(SHORT);
      break;
    case INT:
      jj_consume_token(INT);
      break;
    case LONG:
      jj_consume_token(LONG);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case DOUBLE:
      jj_consume_token(DOUBLE);
      break;
    case SIGNED:
      jj_consume_token(SIGNED);
      break;
    case UNSIGNED:
      jj_consume_token(UNSIGNED);
      break;
    case STRUCT:
    case UNION:
      StructOrUnionSpecifier();
      break;
    case ENUM:
      EnumSpecifier();
      break;
    default:
      jj_la1[4] = jj_gen;
      if (isType(getToken(1).image)) {
        TypedefName();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void TypeQualifier() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONST:
      jj_consume_token(CONST);
      break;
    case VOLATILE:
      jj_consume_token(VOLATILE);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void StructOrUnionSpecifier() throws ParseException {
                        typedefParsingStack.push(Boolean.FALSE);
    StructOrUnion();
    if (jj_2_11(3)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(56);
      StructDeclarationList();
      jj_consume_token(57);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                typedefParsingStack.pop();
  }

  static final public void StructOrUnion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRUCT:
      jj_consume_token(STRUCT);
      break;
    case UNION:
      jj_consume_token(UNION);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void StructDeclarationList() throws ParseException {
    label_3:
    while (true) {
      StructDeclaration();
      if (jj_2_12(1)) {
        ;
      } else {
        break label_3;
      }
    }
  }

  static final public void InitDeclaratorList() throws ParseException {
    InitDeclarator();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_4;
      }
      jj_consume_token(58);
      InitDeclarator();
    }
                // Finished with a typedefDeclaration??
                if(!(typedefParsingStack.empty()) && ((Boolean)typedefParsingStack.peek()).booleanValue()){
                        typedefParsingStack.pop();
          }
  }

  static final public void InitDeclarator() throws ParseException {
    Declarator();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 59:
      jj_consume_token(59);
      Initializer();
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
  }

  static final public void StructDeclaration() throws ParseException {
    SpecifierQualifierList();
    StructDeclaratorList();
    jj_consume_token(55);
  }

  static final public void SpecifierQualifierList() throws ParseException {
    if (jj_2_15(1)) {
      TypeSpecifier();
      if (jj_2_13(2147483647)) {
        SpecifierQualifierList();
      } else {
        ;
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOLATILE:
      case CONST:
        TypeQualifier();
        if (jj_2_14(2147483647)) {
          SpecifierQualifierList();
        } else {
          ;
        }
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void StructDeclaratorList() throws ParseException {
    StructDeclarator();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_5;
      }
      jj_consume_token(58);
      StructDeclarator();
    }
  }

  static final public void StructDeclarator() throws ParseException {
    if (jj_2_16(3)) {
      Declarator();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case 60:
      case 61:
      case 65:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
        case 61:
        case 65:
          Declarator();
          break;
        default:
          jj_la1[13] = jj_gen;
          ;
        }
        jj_consume_token(60);
        ConstantExpression();
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void EnumSpecifier() throws ParseException {
    jj_consume_token(ENUM);
    if (jj_2_17(3)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(56);
      EnumeratorList();
      jj_consume_token(57);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void EnumeratorList() throws ParseException {
    Enumerator();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_6;
      }
      jj_consume_token(58);
      Enumerator();
    }
  }

  static final public void Enumerator() throws ParseException {
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 59:
      jj_consume_token(59);
      ConstantExpression();
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
  }

  static final public void Declarator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 65:
      Pointer();
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    DirectDeclarator();
  }

  static final public void DirectDeclarator() throws ParseException {
                            Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      t = jj_consume_token(IDENTIFIER);
          if(!(typedefParsingStack.empty()) && ((Boolean)typedefParsingStack.peek()).booleanValue()){
                                addType(t.image);
          }
      break;
    case 61:
      jj_consume_token(61);
      Declarator();
      jj_consume_token(62);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    typedefParsingStack.push( Boolean.FALSE );
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 61:
      case 63:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 63:
        jj_consume_token(63);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case CHARACTER_LITERAL:
        case STRING_LITERAL:
        case SIZEOF:
        case IDENTIFIER:
        case 61:
        case 65:
        case 82:
        case 91:
        case 92:
        case 95:
        case 96:
        case 97:
        case 98:
          ConstantExpression();
          break;
        default:
          jj_la1[22] = jj_gen;
          ;
        }
        jj_consume_token(64);
        break;
      default:
        jj_la1[24] = jj_gen;
        if (jj_2_18(3)) {
          jj_consume_token(61);
          ParameterTypeList();
          jj_consume_token(62);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 61:
            jj_consume_token(61);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case IDENTIFIER:
              IdentifierList();
              break;
            default:
              jj_la1[23] = jj_gen;
              ;
            }
            jj_consume_token(62);
            break;
          default:
            jj_la1[25] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
        typedefParsingStack.pop();
  }

  static final public void Pointer() throws ParseException {
    jj_consume_token(65);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOLATILE:
    case CONST:
      TypeQualifierList();
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 65:
      Pointer();
      break;
    default:
      jj_la1[27] = jj_gen;
      ;
    }
  }

  static final public void TypeQualifierList() throws ParseException {
    label_8:
    while (true) {
      TypeQualifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOLATILE:
      case CONST:
        ;
        break;
      default:
        jj_la1[28] = jj_gen;
        break label_8;
      }
    }
  }

  static final public void ParameterTypeList() throws ParseException {
    ParameterList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 58:
      jj_consume_token(58);
      jj_consume_token(66);
      break;
    default:
      jj_la1[29] = jj_gen;
      ;
    }
  }

  static final public void ParameterList() throws ParseException {
    ParameterDeclaration();
    label_9:
    while (true) {
      if (jj_2_19(2)) {
        ;
      } else {
        break label_9;
      }
      jj_consume_token(58);
      ParameterDeclaration();
    }
  }

  static final public void ParameterDeclaration() throws ParseException {
    DeclarationSpecifiers();
    if (jj_2_20(2147483647)) {
      Declarator();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 61:
      case 63:
      case 65:
        AbstractDeclarator();
        break;
      default:
        jj_la1[30] = jj_gen;
        ;
      }
    }
  }

  static final public void IdentifierList() throws ParseException {
    jj_consume_token(IDENTIFIER);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
        ;
        break;
      default:
        jj_la1[31] = jj_gen;
        break label_10;
      }
      jj_consume_token(58);
      jj_consume_token(IDENTIFIER);
    }
  }

  static final public void Initializer() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
    case FLOATING_POINT_LITERAL:
    case CHARACTER_LITERAL:
    case STRING_LITERAL:
    case SIZEOF:
    case IDENTIFIER:
    case 61:
    case 65:
    case 82:
    case 91:
    case 92:
    case 95:
    case 96:
    case 97:
    case 98:
      AssignmentExpression();
      break;
    case 56:
      jj_consume_token(56);
      InitializerList();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 58:
        jj_consume_token(58);
        break;
      default:
        jj_la1[32] = jj_gen;
        ;
      }
      jj_consume_token(57);
      break;
    default:
      jj_la1[33] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
